0.12.0
------
- Removed the deprecated field 'ConfigGroup.instanceIds' from the API.
- Upgraded Mesos to 0.25.0.

0.11.0
------
- Upgraded Mesos to 0.24.1.
- The client-side updater has been removed, along with the CLI commands that used it:
  'aurora job update' and 'aurora job cancel-update'.  Users are encouraged to take
  advantage of scheduler-driven updates (see 'aurora update -h' for usage), which has been a
  stable feature for several releases.
- The field 'JobUpdateSettings.maxWaitToInstanceRunningMs' (UpdateConfig.restart_threshold in
  client-side configuration) is now deprecated.  This setting was brittle in practice, and is
  ignored by the 0.11.0 scheduler.
- Added support for shell-based health checkers in addition to HTTP health checkers. In concert with
  this change the `HealthCheckConfig` schema has been restructured to more cleanly allow configuring
  varied health checkers. The following fields from `HealthCheckConfig` are now deprecated:
  `endpoint`, `expected_response`, `expected_response_code` in favor of setting them as part of an
  `HttpHealthChecker.`
 - Added support for taking in an executor configuration in JSON via a command line argument
   `--custom_executor_config` which will override all other the command line arguments and default
   values pertaining to the executor.
- Log rotation has been added to the thermos runner. See the configuration reference for details
  on how configure rotation per-process. Command line options may also be passed through the
  scheduler in order to configure the global default behavior.
- Added a new scheduler flag 'framework_announce_principal' to support use of authorization and
  rate limiting in Mesos.

0.10.0
------
- The Python build layout has changed:
  * The apache.thermos package has been removed.
  * The apache.gen.aurora package has been renamed to apache.aurora.thrift.
  * The apache.gen.thermos package has been renamed to apache.thermos.thrift.